--- a/app/src/main/res/layout/settings.xml
+++ b/app/src/main/res/layout/settings.xml
@@ -48,6 +48,7 @@
         android:textColor="@android:color/black"
         android:textSize="20sp"
         app:layout_constraintLeft_toLeftOf="@id/screen_splitter"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="@id/text_platform" />
 
     <TextView
@@ -66,6 +67,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintLeft_toLeftOf="@id/screen_splitter"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="@id/text_start_paused" />
 
     <TextView
@@ -84,6 +86,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:inputType="numberDecimal"
+        android:gravity="center"
         android:hint="@string/AREF_value_hint"
         app:layout_constraintLeft_toLeftOf="@id/screen_splitter"
         app:layout_constraintRight_toRightOf="parent"
