--- a/app/src/main/res/layout/settings.xml
+++ b/app/src/main/res/layout/settings.xml
@@ -48,7 +48,8 @@
         android:textColor="@android:color/black"
         android:textSize="20sp"
         app:layout_constraintLeft_toLeftOf="@id/screen_splitter"
-        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintRight_toRightOf="parent
+"
         app:layout_constraintTop_toTopOf="@id/text_platform" />
 
     <TextView
