--- a/app/src/main/res/layout/about_page.xml
+++ b/app/src/main/res/layout/about_page.xml
@@ -54,10 +54,9 @@
         app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
     <TextView
-        android:id="@+id/textView7"
+        android:id="@+id/versionText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/app_version"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:textColor="@android:color/white"
         app:layout_constraintEnd_toEndOf="parent"
@@ -70,7 +69,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:barrierDirection="bottom"
-        app:constraint_referenced_ids="textView7"
+        app:constraint_referenced_ids="versionText"
         tools:layout_editor_absoluteY="230dp" />
 
     <TextView
